artifacts/example-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ost-component: example-app
  name: example-app
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    ost-component: example-app
  type: NodePort
